16_subseq/grade.txt
Grading at Thu Nov  1 11:02:02 UTC 2018
Attempting to compile maxSeq.c 
maxSeq.c:2:1: error: unknown type name ‘size_t’
 size_t maxSeq (int * array, size_t n) {
 ^
maxSeq.c:2:29: error: unknown type name ‘size_t’
 size_t maxSeq (int * array, size_t n) {
                             ^
The code did not compile!

Overall Grade: F
